--- a/src/stylesheets/login.css
+++ b/src/stylesheets/login.css
@@ -23,27 +23,39 @@ body {
 }
 .form-container {
     position: absolute;
-    background-color: rgb(rgb(41, 21, 67), green, blue);
+    background-color: transparent; /* Keep background transparent */
     width: 400px;
-      padding: 20px;
-      text-align: center;
-      height: 500px;
-      right: 30%;
+    padding: 20px;
+    text-align: center;
+    height: 500px;
+    right: 30%;
+    border: 2px solid transparent; /* Transparent border initially */
+    box-shadow: 0 0 5px rgba(255, 215, 0, 0.7), 0 0 15px rgba(255, 215, 0, 0.7); /* Glowing gold border */
+    animation: glowing 1.5s infinite alternate; /* Animation for glow effect */
 }
+
+@keyframes glowing {
+    0% {
+        box-shadow: 0 0 5px rgba(255, 215, 0, 0.7), 0 0 15px rgba(255, 215, 0, 0.7);
+    }
+    100% {
+        box-shadow: 0 0 10px rgba(255, 215, 0, 1), 0 0 25px rgba(255, 215, 0, 1);
+    }
+}
+
 h2 {
     margin-bottom: 20px;
     color: aliceblue;
-    font-style: calc();
     font-size: 43px;
-  }
-  label {
+}
+label {
     color: whitesmoke;
     display: block;
     text-align: left;
     margin-bottom: 5px;
     font-size: large;
-  }
-  input {
+}
+input {
     width: 100%;
     background-color: black;
     color: #d8bc6d;
@@ -51,8 +63,8 @@ h2 {
     font-size: large;
     margin-bottom: 20px;
     border-color: black;
-  }
-  button {
+}
+button {
     width: 100%;
     padding: 20px;
     font-size: 15px;
@@ -61,35 +73,62 @@ h2 {
     border: none;
     border-radius: 5px;
     cursor: pointer;
-  }
-  button:hover {
+    
+    transition: background-color 0.25s ;
+    
+    transition: color 0.25s ;
+}
+button:hover {
     background-color: whitesmoke;
-  }
-  a {
+    color: black;
+}
+a {
     display: block;
     margin-top: 10px;
-    color:whitesmoke;
+    color: whitesmoke;
     text-decoration: none;
-  }
-  a:hover {
+}
+a:hover {
     text-decoration: underline;
-  }
-  .message {
+}
+.message {
     color: white;
     margin-top: 10px;
-  }
-.icon{
+}
+.icon {
     position: absolute;
-    left:18%;
+    left: 18%;
     top: 24%;
     width: 130px;
     height: 130px;
-    
 }
-.tagline{
+.tagline {
     position: absolute;
     color: #d8bc6d;
-    left:15%;
+    left: 15%;
     top: 44%;
     font-size: 50px;
 }
+/* Add this to your login.css */
+.social-login {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.social-btn {
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  border: none;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-weight: bold;
+  font-size: 14px;
+  transition: all 0.3s ease;
+}
+
